Update 'go-ohgadxol' component image to: quay.io/tsscui/go-ohgadxol:088666eff1a04cc5862a7c49619dc0309e314bec@sha256:505eaaadae0ce55773360111c0ffdc1dfef9b94b3290163b2afd8817998ec428

--- a/components/go-ohgadxol/overlays/development/deployment-patch.yaml
+++ b/components/go-ohgadxol/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: go-ohgadxol
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-tssc/task-runner:1.8
-        name: container-image  
+        - image: quay.io/tsscui/go-ohgadxol:088666eff1a04cc5862a7c49619dc0309e314bec@sha256:505eaaadae0ce55773360111c0ffdc1dfef9b94b3290163b2afd8817998ec428
+          name: container-image
